[package]
name = "zwatch"
version = "0.1.0"
edition = "2021"
description = "A ziglings hot reloader."
authors = ["Jonxslays"]
readme = "README.md"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
notify = { version = "5.1.0",  features = ["serde"] }
notify-debouncer-mini = { version = "0.2.0" }
